# whatshell

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release.yml
npm/: install-skills.js  install.js  test-install-skills.js
skills/wacli/: SKILL.md
skills/wacli/agents/: openai.yaml
skills/wacli/references/: command-recipes.md  troubleshooting.md
skills/whatshell/: SKILL.md
skills/whatshell/agents/: openai.yaml
skills/whatshell/references/: command-recipes.md  troubleshooting.md
src/: cli.rs  config.rs  extract.rs  jid.rs  lock.rs  main.rs  output.rs  store.rs  wacli.rs  whatshell.rs
tests/: cli.rs
